gtk-4.0/gtk-dark.css
/* ... */
tabbar scrolledwindow.pinned undershoot {
  border: 0 solid var(--outline_variant);
}

tabbar scrolledwindow.pinned:dir(rtl) undershoot.left {
  border-left-width: 1px;
}

tabbar scrolledwindow.pinned:dir(ltr) undershoot.right {
  border-right-width: 1px;
}

tabbar scrolledwindow.pinned tabbox {
  padding: 3px 3px 3px 0;
}

tabbar scrolledwindow.pinned tabbox > tabboxchild {
  margin: 0;
}

tabbar scrolledwindow.pinned tabbox > background:dir(ltr) {
  box-shadow: inset -1px 0 var(--outline_variant);
}

tabbar scrolledwindow.pinned tabbox > background:dir(rtl) {
  box-shadow: inset 1px 0 var(--outline_variant);
}

tabbar scrolledwindow:not(.pinned) tabbox {
  padding: 3px 0;
}

tabbar scrolledwindow:not(.pinned) tabbox > tabboxchild {
  margin: 0 -2px;
}

tabbar scrolledwindow:not(.pinned) tabbox > tabboxchild + separator + tabboxchild {
  margin-left: 0;
}

tabbar undershoot {
  transition: background 150ms ease-in-out;
}

tabbar undershoot.left {
  background: linear-gradient(to right, var(--surface_container), rgba(0, 0, 0, 0) 20px);
}

tabbar undershoot.right {
  background: linear-gradient(to left, var(--surface_container), rgba(0, 0, 0, 0) 20px);
}

tabbar .needs-attention-left undershoot.left {
  background: linear-gradient(to right,
    color-mix(in srgb, var(--primary) 50%, transparent),
    color-mix(in srgb, var(--primary) 30%, transparent) 1px,
    color-mix(in srgb, var(--primary) 0%, transparent) 20px);
}

tabbar .needs-attention-right undershoot.right {
  background: linear-gradient(to left,
    color-mix(in srgb, var(--primary) 50%, transparent),
    color-mix(in srgb, var(--primary) 30%, transparent) 1px,
    color-mix(in srgb, var(--primary) 0%, transparent) 20px);
}

tabbar tabbox {
  background-color: transparent;
  background-image: none;
  padding: 0;
  margin: 0;
  border: none;
  box-shadow: none;
}

tabbar tabbox > background {
  background: none;
}

tabbar tabbox > separator {
  margin: 9px 0;
  min-width: 1px;
  background-color: var(--outline_variant);
  transition: opacity 150ms ease-in-out;
}

tabbar tabbox > separator.hidden {
  opacity: 0;
}

tabbar tabbox > tabboxchild {
  padding: 0;
}

tabbar tabbox > tabboxchild > tab {
  margin: 0;
}

tabbar tab.needs-attention {
  background-image: radial-gradient(ellipse at bottom,
    color-mix(in srgb, var(--primary) 80%, transparent),
    color-mix(in srgb, var(--primary) 40%, transparent) 10%,
    color-mix(in srgb, var(--primary) 0%, transparent) 30%);
}

tabbar tab.needs-attention:hover {
  background-image:
    image(color-mix(in srgb, currentColor 3%, transparent)),
    radial-gradient(ellipse at bottom,
      color-mix(in srgb, var(--primary) 80%, transparent),
      color-mix(in srgb, var(--primary) 40%, transparent) 10%,
      color-mix(in srgb, var(--primary) 0%, transparent) 30%);
}

tabbar .start-action,
tabbar .end-action {
  background-color: var(--surface_container_low);
  background-clip: padding-box;
  border-color: var(--outline_variant);
  border-style: solid;
  transition: background 150ms ease-in-out;
}

tabbar .start-action button,
tabbar .end-action button {
  border: none;
  border-radius: 0;
}

tabbar .start-action:dir(ltr),
tabbar .end-action:dir(rtl) {
  border-right-width: 1px;
}

tabbar .start-action:dir(rtl),
tabbar .end-action:dir(ltr) {
  border-left-width: 1px;
}

tabbar:not(.inline) scrolledwindow.pinned undershoot {
  border-color: var(--outline_variant);
}

tabbar:not(.inline) undershoot.left {
  background: linear-gradient(to right, var(--surface_container), rgba(0, 0, 0, 0) 20px);
}

tabbar:not(.inline) undershoot.right {
  background: linear-gradient(to left, var(--surface_container), rgba(0, 0, 0, 0) 20px);
}

tabbar:not(.inline) .needs-attention-left undershoot.left {
  background: linear-gradient(to right,
    color-mix(in srgb, var(--primary) 50%, transparent),
    color-mix(in srgb, var(--primary) 30%, transparent) 1px,
    color-mix(in srgb, var(--primary) 0%, transparent) 20px);
}

tabbar:not(.inline) .needs-attention-right undershoot.right {
  background: linear-gradient(to left,
    color-mix(in srgb, var(--primary) 50%, transparent),
    color-mix(in srgb, var(--primary) 30%, transparent) 1px,
    color-mix(in srgb, var(--primary) 0%, transparent) 20px);
}

tabbar:not(.inline) tabbox > background {
  background-color: var(--surface_container);
}

tabbar:not(.inline) .start-action,
tabbar:not(.inline) .end-action {
  background-color: var(--surface_container);
  border-color: var(--outline_variant);
}

dnd tab {
  min-height: 24px;
  background-color: var(--surface_container);
  color: var(--on_surface);
  outline: 1px solid var(--outline_variant);
  outline-offset: -1px;
  margin: 24px;
}

dnd tab.needs-attention {
  background-image: radial-gradient(ellipse at bottom,
    color-mix(in srgb, var(--primary) 80%, transparent),
    color-mix(in srgb, var(--primary) 40%, transparent) 10%,
    color-mix(in srgb, var(--primary) 0%, transparent) 30%);
}

tabbar tab,
dnd tab {
  padding: 6px;
}

tabbar tab button.image-button,
dnd tab button.image-button {
  padding: 0;
  margin: 0;
  min-width: 24px;
  min-height: 24px;
  border-radius: 9999px;
}

tabbar tab button.image-button.tab-close-button,
dnd tab button.image-button.tab-close-button {
  margin-right: -3px;
}

tabview:drop(active),
tabbox:drop(active) {
  box-shadow: none;
}

/**************
 * Scrollbars *
 **************/
scrollbar {
  transition: background-color 75ms cubic-bezier(0, 0, 0.2, 1);
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

scrollbar.top {
  border-bottom: 1px solid transparent;
}

scrollbar.bottom {
  border-top: 1px solid transparent;
}

scrollbar.left {
  border-right: 1px solid transparent;
}

scrollbar.right {
  border-left: 1px solid transparent;
}

scrollbar > range > trough {
  outline: none;
  background: none;
}
/* ... */

